<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Calculadora!</string>
    <string name="app_name">Calculadora do Picolo</string>
    <string name="B1">1</string>
    <string name="B2">2</string>
    <string name="B3">3</string>
    <string name="B4">4</string>
    <string name="B5">5</string>
    <string name="B6">6</string>
    <string name="B7">7</string>
    <string name="B8">8</string>
    <string name="B9">9</string>
    <string name="B0">0</string>
    <string name="Dot">.</string>
    <string name="Eq">=</string>
    <string name="Clear">"C"</string>
    <string name="ce">"CE"</string>
    <string name="sum">+</string>
    <string name="dif">-</string>
    <string name="mul">x</string>
    <string name="div">/</string>
    <string name="porcent">%</string>
    <string name="exponent">^</string>
    <string name="maisoumenos">+/-</string>	
    <string name="Empty">0</string>
    <string name="vazio">""</string>
    <dimen name="ButtonSize">57dp</dimen>
    <dimen name="ButtonSizeLand">39dp</dimen>
    
    <dimen name="TextSize">30dp</dimen>
    <dimen name="TextSize_land">30dp</dimen>
    <dimen name="textBotaoLimpar">20dp</dimen>
    <dimen name="TextSizeClearButtonLand" >20dp</dimen>
    <dimen name="ViewedTextSize">55dp</dimen>
    <dimen name="ViewedTextSizeland">30dp</dimen>
	<dimen name="ViewedTextSize2">30dp</dimen>
	<dimen name="ViewedTextSize2land">30dp</dimen>
    <dimen name="TextViewHeight">65dp</dimen>
    <dimen name="ButtonMargin">1dp</dimen>
    
    <color name="BackgroundColor">#7f8c8d</color>
    <color name="ButtonColor">#bdc3c7</color>
    <color name="ButtonColor2">#34495e</color>
    <color name="ColorText2">#ecf0f1</color>
</resources>